<resources>
    <string name="app_name">中科鑫合</string>
    <!--通用-->
    <string name="search_edit">请输入员工姓名</string>
    <string name="search_btn">查询</string>
    <!-- 语音-->
    <string name="get_btn">get请求</string>
    <string name="get_view">get请求获取到的内容</string>
    <string name="post_btn">post请求</string>
    <string name="post_view">post请求获取到的内容</string>
    <string name="send_text_btn">发送</string>
    <string name="send_text">请输入要发送的文字</string>
    <string name="record_btn">录音</string>
    <string name="play_btn">播放</string>
    <string name="send_btn">发送</string>
    <!-- 登录-->
    <string name="user_account">请输入账号</string>
    <string name="user_psd">请输入密码</string>
    <string name="login_btn">登  录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码？</string>
    <!-- 注册-->
    <string name="register_account">请输入手机号</string>
    <string name="register_psd">请输入密码</string>
    <string name="register_psd_again">请再次输入密码</string>
    <string name="register_btn">注  册</string>
    <!-- 忘记密码-->
    <string name="forget_account">请输入手机号</string>
    <string name="forget_code">请输入验证码</string>
    <string name="get_forget_code">获取验证码</string>
    <string name="forget_btn">找回密码</string>
    <string name="id_card">请输入身份证号</string>
    <string name="new_psd">请输入新密码</string>
    <!-- 首页-->
    <string name="person_sort1">井下总人数</string>
    <string name="person_sort2">超时人数</string>
    <string name="person_sort3">严重超时人数</string>
    <string name="person_sort4">缺勤人数</string>
    <string name="person_sort5">重点区域人数</string>
    <string name="person_sort6">限制区域人数</string>

    <string name="home_sort1">实时监测</string>
    <string name="home_sort2">警报提醒</string>
    <string name="home_sort3">设备管理</string>
    <string name="home_sort4">人员管理</string>
    <string name="home_sort5">历史轨迹</string>
    <string name="home_sort6">考勤管理</string>

    <string name="bottom_btn1">首页</string>
    <string name="bottom_btn2">气体监测</string>
    <string name="bottom_btn3">人员监测</string>
    <string name="bottom_btn4">个人中心</string>

    <string name="title_activity_index">activity_index</string>
    <!--气体监测-->
    <string name="gas_sort1">甲烷</string>
    <string name="gas_sort2">一氧化碳</string>
    <string name="gas_sort3">氧气</string>
    <string name="gas_sort4">温度</string>
    <string name="gas_sort5">湿度</string>
    <!--人员监测-->
    <string name="person1_sort">井下总人员</string>
    <string name="person2_sort">超时人员</string>
    <string name="person3_sort">严重超时人员</string>
    <string name="person4_sort">缺勤人员</string>
    <string name="person5_sort">重点区域人员</string>
    <string name="person6_sort">限制区域人员</string>
    <!--关于我们-->
    <string name="about_us1">
        中科鑫合科技有限公司(简称中科鑫合)是有着中国计算机事业摇篮之称的——中国科学院计算技术研究所(简称中科院计算所)的孵化企业，中科院计算所曾孵化出联想、龙芯、曙光、寒武纪等国家高新技术领军企业。同时，公司联合中科院计算技术研究所大数据研究院、北京大数据研究院为公司提供了关键技术支持。中科鑫合致力于将中科院计算所、北京大学以及北京大数据研究院在物联网以及大数据方面的高新技术成果进行产品转化与产业化应用推广。
    </string>
    <string name="about_us2">
        中科鑫合作为一家脱胎于中国第一个专门从事计算机科学技术综合性研究的学术机构一中国科学院计算技术研究所的企业，公司的核心技术研发团队80％来自于中科院计算所、中科院计算技术研究所大数据研究院等科研机构和院校的硕士、博士研究生，能够得到多位中科院研究员、教授的技术指导，具有雄厚的科研技术研发能力，有足够的技术实力解决各种技术难题和挑战。未来，中科鑫合将以助力建设智慧矿山为导向，集结所有优势科技力量，将物联网以及大数据技术推广应用于煤矿企业，保障煤矿企业的安全生产过程，提高矿井的生产和管理效率，助力企业建设智慧矿山。
    </string>

</resources>
