<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aotedan.ui.home.HomeFragment"
        android:label="@string/bottom_btn1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gas"
        android:name="com.example.aotedan.ui.gas.GasFragment"
        android:label="@string/bottom_btn2"
        tools:layout="@layout/fragment_gas" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.aotedan.ui.person.PersonFragment"
        android:label="@string/bottom_btn3"
        tools:layout="@layout/fragment_person" />
    <fragment
        android:id="@+id/navigation_center"
        android:name="com.example.aotedan.ui.center.CenterFragment"
        android:label="@string/bottom_btn4"
        tools:layout="@layout/fragment_center" />
</navigation>
