<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/send_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_text" />

    <Button
        android:id="@+id/send_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text_btn"
        />

    <Button
        android:id="@+id/get_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_btn" />
</LinearLayout>
