<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/send_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                android:background="@drawable/main_input"
                android:hint="@string/send_text"
                />
            <Button
                android:id="@+id/send_text_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="@drawable/btn_primary"
                android:text="@string/send_text_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/record_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="@drawable/btn_success"
                android:text="@string/record_btn"/>
            <Button
                android:id="@+id/play_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginRight="30dp"
                android:background="@drawable/error_btn"
                android:text="@string/play_btn"/>
            <Button
                android:id="@+id/send_voice_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="@drawable/btn_primary"
                android:text="@string/send_btn"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
