<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <include layout="@layout/title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/input_border"
            android:textSize="18sp"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000000"
            android:hint="@string/register_account"/>

        <EditText
            android:id="@+id/register_psd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/input_border"
            android:textSize="18sp"
            android:inputType="textWebPassword"
            android:maxLines="1"
            android:textColor="#000000"
            android:hint="@string/register_psd"/>
        <EditText
            android:id="@+id/register_psd_again"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/input_border"
            android:textSize="18sp"
            android:inputType="textWebPassword"
            android:maxLines="1"
            android:textColor="#000000"
            android:hint="@string/register_psd_again"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:textColor="#fff"
            android:background="@drawable/shape"
            android:text="@string/register_btn"
            android:textSize="18sp"
            />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>