<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/title_bar"/>
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:background="@drawable/icon"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/username"/>
            <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:textSize="18sp"
            android:inputType="text"
            android:maxLines="1"
            android:text="13243210010"
            android:textColor="#333"
            android:hint="@string/user_account"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d7d9"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/password"/>
            <EditText
                android:id="@+id/user_psd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:textSize="18sp"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:text="123456"
                android:textColor="#333"
                android:hint="@string/user_psd"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/borderLine"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:textColor="#fff"
            android:background="@drawable/shape"
            android:text="@string/login_btn"
            android:textSize="18sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            >
        <Button
            android:id="@+id/register"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="@color/colorMinor"
            />
        <Button
            android:id="@+id/forget"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget"
            android:textSize="16sp"
            android:textColor="@color/colorMinor"
            />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
