<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.person.PersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--标题栏-->
        <include layout="@layout/title_bar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp">
                <LinearLayout
                    android:id="@+id/sort_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/total" />

                    <TextView
                        android:id="@+id/sort_btn1_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/person1_sort"
                        android:textColor="#333"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sort_btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/time_out" />

                    <TextView
                        android:id="@+id/sort_btn2_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/person2_sort"
                        android:textColor="#333"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sort_btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/severe_time_out" />

                    <TextView
                        android:id="@+id/sort_btn3_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/person3_sort"
                        android:textColor="#333"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp">
                <LinearLayout
                    android:id="@+id/sort_btn4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/absence" />
                    <TextView
                        android:id="@+id/sort_btn4_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/person4_sort"
                        android:textColor="#333"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sort_btn5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/important" />

                    <TextView
                        android:id="@+id/sort_btn5_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/person5_sort"
                        android:textColor="#333"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/sort_btn6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/limit" />

                    <TextView
                        android:id="@+id/person6_sort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/person6_sort"
                        android:textColor="#333"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
        <!--搜索-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/staff_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/gasEdit"
                android:background="@drawable/input_border_small"
                android:hint="@string/search_edit"/>
            <Button
                android:id="@+id/search_btn"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/searchBtn"
                android:background="@drawable/btn_primary_small"
                android:text="@string/search_btn"
                />
        </LinearLayout>
        <!--列表-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingBottom="60dp"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collect_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>