<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.center.CenterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!--个人中心-->
        <!--标题栏-->
        <include layout="@layout/title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/tx"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/center_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/center_text"
            android:text="admin"/>

        <TextView
            android:id="@+id/center_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/center_text" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/send_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                android:background="@drawable/main_input"
                android:hint="@string/send_text"
                />
            <Button
                android:id="@+id/send_text_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="@drawable/btn_primary"
                android:text="@string/send_text_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/record_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="@drawable/btn_success"
                android:text="@string/record_btn"/>
            <Button
                android:id="@+id/play_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginRight="30dp"
                android:background="@drawable/error_btn"
                android:text="@string/play_btn"/>
            <Button
                android:id="@+id/send_voice_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="@drawable/btn_primary"
                android:text="@string/send_btn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_logout"
                android:textColor="#333"
                android:text="退出登录"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>